--- a/css/style.css
+++ b/css/style.css
@@ -298,7 +298,6 @@ h1 {
     overflow-y: auto;
     overflow-x: hidden;
     z-index: -1;
-    align: center;
     display: block;
 }
 
@@ -371,7 +370,6 @@ aaa::after {
     display: inline;
     margin: 0px 4px;
     min-width: 70px;
-    width: auto;
     text-align: center;
     padding: 7px 6px;
     background-color: #FFFFFF;
@@ -414,6 +412,10 @@ aaa::after {
   top: 50%;
   padding: 3px;
   flex: 0 0 5%;
+}
+
+.typed_wrap {
+  margin-top: 5px;
 }
 
 .descid {
@@ -477,21 +479,14 @@ aaa::after {
   padding: 3px;
 }
 
-.typewriter p {
+.typed {
   overflow: hidden; /* Ensures the content is not revealed until the animation */
   border-right: .15em solid #aa9db3; /* The typwriter cursor */
   white-space: nowrap; /* Keeps the content on a single line */
   margin: 0 auto; /* Gives that scrolling effect as the typing happens */
-
+  padding-right: 5px;
   animation:
-    typing 2.5s steps(40, end),
     blink-caret .75s step-end infinite;
-}
-
-/* The typing effect */
-@keyframes typing {
-  from { width: 0 }
-  to { width: 100% }
 }
 
 /* The typewriter cursor effect */
